# Karaoke_Lyric_Sync_Player

./: README.md
KaraokeApp/: CMakeLists.txt  Halaman_Utama.qml  Halaman_pemilihan.qml  Halaman_pemutaran.qml  Icon_3pt_Bell.qml  Icon_Chevron_Right_Slim_LTR.qml  Icon_Like.qml  Icon_Lines_Horizontal_Decrease_Rectangle_LTR.qml  Icon_Person.qml  Icon_Person_Tick.qml  Icon_Tab_Discover.qml  Icon_Watch_History.qml  Karaoke_Lyric_Sync_Player.qmlproject  Main.qml  main.cpp
LogikaCPP/: AudioPlayer.h  LrcParser.h  info.txt
LogikaCPP/logika playlist/: bank_lagu.json  playlist.cpp
